# FirstProject

./: .gitignore  README.md  pyproject.toml  requirements.txt
.virtual_documents/notebooks/: OECD _API_data_extraction.ipynb  Untitled.ipynb  final_unified_load_and_clean_data.ipynb  gender_wage_gap_analysis.ipynb  load_and_clean_data_luciest06.ipynb  load_and_clean_data_paola-Copy1.ipynb  load_and_clean_data_paola.ipynb  paola.ipynb
data/clean/: GDP_2021_countries.xlsx
data/raw/: API_SG.TIM.UWRK.FE_DS2_en_csv_v2_3435778.csv  Metadata_Country_API_SG.TIM.UWRK.FE_DS2_en_csv_v2_3435778.csv  Metadata_Indicator_API_SG.TIM.UWRK.FE_DS2_en_csv_v2_3435778.csv  WORLD Gender Equality in the Economy Public Use Data Dictionary 2.28.23.docx  WORLD_Dataset_Gender_Equality_in_the_Economy_5.19.23.dta  WORLD_Dataset_Gender_Equality_in_the_Economy_5.19.23.xlsx  gender_wage_gap_data.csv
notebooks/: OECD _API_data_extraction.ipynb  Untitled.ipynb  explore_clean_garima.ipynb  explore_clean_nicole.ipynb  final_unified_load_and_clean_data.ipynb  functions.py  gender_wage_gap_analysis.ipynb  load_and_clean_data_luciest06.ipynb  load_and_clean_data_nicolev2.ipynb  load_and_clean_data_paola.ipynb  map.ipynb  test.ipynb  unified_load_and_clean_data.ipynb
notebooks/.virtual_documents/: final_unified_load_and_clean_data.ipynb
slides/: Team 1_Week3.pptx  ~$Team 1_Week3.pptx
src/firstproject/: __init__.py
src/project/: __init__.py
