[project]
name = "firstproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "geopandas>=1.0.1",
    "numpy>=2.1.0",
    "pandas>=2.2.2",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "wbdata>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
