[project]
name = "firstproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.1",
    "pandas>=2.2.2",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "geopandas>=1.0.1",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
